--- a/src/FindScale.css
+++ b/src/FindScale.css
@@ -2,17 +2,23 @@
   font-family: sans-serif;
 }
 
+.selectScale {
+  display: grid;
+  grid-auto-flow: row;
+  gap: 12px;
+}
+
 .row {
   margin-bottom: 10px;
   position: relative;
   /*border-left: 1px solid black;*/
-  height: 40px;
+  height: 50px;
   display: flex;
 }
 
 .square {
   width: 50px;
-  height: 40px;
+  height: 50px;
   border-right: 1px solid lightgrey;
   display: flex;
   justify-content: center;
@@ -46,6 +52,6 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 20px;
+  height: 25px;
   border-bottom: 1px dotted gray;
 }
