--- a/src/FindScale.css
+++ b/src/FindScale.css
@@ -16,6 +16,25 @@
   display: flex;
 }
 
+.row.string:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 25px;
+  border-bottom: 1px dotted gray;
+}
+
+.headSquare {
+  width: 50px;
+  height: 50px;
+  border-right: 1px solid lightgrey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .square {
   width: 50px;
   height: 50px;
@@ -44,14 +63,4 @@
 
 .square:first-of-type {
   border-right: 1px solid black;
-}
-
-.row:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 25px;
-  border-bottom: 1px dotted gray;
 }
